src/bindings.h

// Callback typedefs owned by bindings.cpp (the mixer-output, visualization,
// buffering and metadata callback typedefs come from enums.h and
// audiobuffer/metadata_ffi.h).
typedef void (*dartVoiceEndedCallback_t)(unsigned int *);
typedef void (*dartFileLoadedCallback_t)(enum PlayerErrors *,
                                         char *completeFileName,
                                         unsigned int *, uint64_t *counter);
typedef void (*dartStateChangedCallback_t)(enum PlayerStateEvents *);
  /// Set a Dart functions to call when an event occurs.
  ///
  /// [owner_engine_id] is the FlutterEngine whose isolate created these
  /// trampolines, or -1 where no engine lifecycle is available. It is recorded
  /// so that a detaching or hot-restarting engine can retire *its own*
  /// callables and never somebody else's.
  FFI_PLUGIN_EXPORT void
  setDartEventCallback(dartVoiceEndedCallback_t voice_ended_callback,
                       dartFileLoadedCallback_t file_loaded_callback,
                       dartStateChangedCallback_t state_changed_callback,
                       int64_t owner_engine_id);
  /// Claim the native engine for a FlutterEngine ahead of initializing it.
  ///
  /// [owner_engine_id] is the FlutterEngine that will own the engine this
  /// initialization creates, or -1 on platforms with no engine-lifecycle
  /// hooks.
  FFI_PLUGIN_EXPORT void prepareEngineInit(int64_t owner_engine_id);
  /// prepareEngineInit() for a claim that was decided earlier than it is
  /// taken.
  ///
  /// Returns false, changing nothing, when a shutdown has been requested
  /// since [shutdown_epoch] was read.
  FFI_PLUGIN_EXPORT bool prepareEngineInitForRequest(int64_t owner_engine_id,
                                                     uint64_t shutdown_epoch);
  /// Tear the engine down because its owning FlutterEngine is being destroyed
  /// while the process keeps running (the audio_service / add-to-app case).
  ///
  /// Returns false unless [engine_id] still owns the native engine.
  FFI_PLUGIN_EXPORT bool requestEngineTeardownForEngine(int64_t engine_id);
  FFI_PLUGIN_EXPORT int isInited();
  //////////////////////////////////////////////////////////////
  /// Loading sounds and streams

  /// Load a new sound to be played once or multiple times later.
  ///
  /// After loading the file, the [fileLoadedCallback] will call the
  /// Dart function defined with [setDartEventCallback] which gives back
  /// the error and the new hash.
  ///
  /// [completeFileName] the complete file path.
  /// [loadIntoMem] if true Soloud::wav will be used which loads
  /// all audio data into memory. This will be useful when
  /// the audio is short, ie for game sounds, mainly used to prevent
  /// gaps or lags when starting a sound (less CPU, more memory allocated).
  /// If false, Soloud::wavStream will be used and the audio data is loaded
  /// from the given file when needed (more CPU, less memory allocated).
  /// See the [seek] note problem when using [loadIntoMem] = false
  FFI_PLUGIN_EXPORT void loadFile(char *completeFileName, bool loadIntoMem,
                                  uint64_t counter);
  /// Load a new sound stored into [buffer] to be played once or multiple times
  /// later. Mainly used on web because the browsers are not allowed to read
  /// files directly.
  ///
  /// [uniqueName] the unique name of the sound. Used only to have the [hash].
  /// [buffer] the audio data. These contains the audio file bytes.
  /// [length] the length of [buffer].
  /// [loadIntoMem] if true Soloud::wav will be used which loads
  /// all audio data into memory. This will be useful when
  /// the audio is short, ie for game sounds, mainly used to prevent
  /// gaps or lags when starting a sound (less CPU, more memory allocated).
  /// If false, Soloud::wavStream will be used and the audio data is loaded
  /// from the given file when needed (more CPU, less memory allocated).
  /// See the [seek] note problem when using [loadIntoMem] = false
  /// [hash] return the hash of the sound.
  FFI_PLUGIN_EXPORT enum PlayerErrors loadMem(char *uniqueName,
                                              unsigned char *buffer,
                                              int length, int loadIntoMem,
                                              unsigned int *hash);
  /// Load 2 audios, convert to mono if needed, and join them into a single
  /// stereo AudioSource.
  /// [hash] return the hash of the sound.
  FFI_PLUGIN_EXPORT enum PlayerErrors joinTwoSources(char *uniqueName,
                                                     unsigned char *mem1,
                                                     unsigned char *mem2,
                                                     int length1, int length2,
                                                     unsigned int *hash);
  /// Set up an audio stream.
  ///
  /// [maxBufferSize] the max buffer size in **bytes**. When adding audio data
  /// using [addAudioDataStream] and this values is reached, the stream will
  /// be considered ended (likewise we called [setDataIsEnded]). This means
  /// that when playing it, it will stop at that point (if loop is not set).
  ///
  /// **Note:** this parameter doesn't allocate any memory, but it just limits
  /// the amount of data that can be added.
  ///
  /// [bufferingTimeNeeds] the buffering time needed in seconds. If a handle
  /// reaches the current buffer length, it will start to buffer pausing it
  /// and waiting until the buffer will have enough data to cover this time.
  ///
  /// [sampleRate] the sample rate. Usually is 22050 or 44100 (CD quality).
  /// When using [format] as `opus`, the sample rate can be 48000, 24000,
  /// 16000, 12000 or 8000. Whatever the sample rate of the incoming data is,
  /// it will be resampled to this value. So, if you are adding Opus data at
  /// 48 KHz, and you set this to 24000, the data will be resampled to 24 KHz.
  ///
  /// [channels] choose the number of channels. The `opus` format
  /// supports only mono and stereo.
  ///
  /// [format] choose from `f32le`, `s8`, `s16le`, `s32le` and
  /// `opus`. The last one is a special format that uses the Opus codec with
  /// Ogg container. It supports only 48, 24, 16, 12 and 8 KHz sample rates
  /// and mono and stereo.
  ///
  /// [onBufferingCallback] a callback that is called when starting to buffer
  /// (isBuffering = true) and when the buffering is done (isBuffering =
  /// false). The callback is called with the `handle` which triggered the
  /// event and the `time` in seconds.
  FFI_PLUGIN_EXPORT enum PlayerErrors
  setBufferStream(unsigned int *hash, unsigned long maxBufferSize,
                  int bufferingType, double bufferingTimeNeeds,
                  unsigned int sampleRate, unsigned int channels, int format,
                  dartOnBufferingCallback_t onBufferingCallback,
                  dartOnMetadataCallback_t onMetadataCallback);
  /// Resets the buffer of the data stream.
  /// [hash] the hash of the stream sound.
  FFI_PLUGIN_EXPORT enum PlayerErrors resetBufferStream(unsigned int hash);
  /// Get the time consumed by the stream of a type `BufferingType.RELEASED`
  /// with hash [hash].
  FFI_PLUGIN_EXPORT enum PlayerErrors getStreamTimeConsumed(
      unsigned int hash, float *timeConsumed);
  /// Set the icy metadata integer value. Must be set once before calling
  /// the first time [addAudioDataStream] to be able to get MP3 metadata
  /// of a stream.
  ///
  /// [hash] the hash of the stream sound.
  /// [icyMetaInt] the icy metadata integer value. Default is 16000 which
  /// is the most used value.
  FFI_PLUGIN_EXPORT enum PlayerErrors setBufferIcyMetaInt(unsigned int hash,
                                                          int icyMetaInt);
  /// Set up a pull-based audio stream.
  ///
  /// [audioSizeBytes] the total size in **bytes** of the original encoded or
  /// PCM stream. This is used to compute the total audio duration and to
  /// request the tail chunk for formats where the duration is not in the
  /// header (Ogg Vorbis/Opus).
  ///
  /// [onBufferingCallback] a callback that is called when starting to buffer
  /// and when the buffering is done.
  ///
  /// [onMetadataCallback] a callback that is called when metadata is detected.
  ///
  /// [onMoreDataIsNeededCallback] a callback that is called when the engine
  /// needs more encoded audio data. The parameter is the byte offset in the
  /// original encoded stream.
  ///
  /// [onAudioDurationCallback] a callback that is called once the total audio
  /// duration has been determined.
  FFI_PLUGIN_EXPORT enum PlayerErrors setPullBufferStream(
      unsigned int *hash, unsigned int bufferSizeBytes,
      double bufferTriggerPosition, unsigned int sampleRate,
      unsigned int channels, int format, uint64_t audioSizeBytes,
      dartOnBufferingCallback_t onBufferingCallback,
      dartOnMetadataCallback_t onMetadataCallback,
      dartOnMoreDataIsNeededCallback_t onMoreDataIsNeededCallback,
      dartOnAudioDurationCallback_t onAudioDurationCallback);
  /// Resets the pull buffer stream.
  FFI_PLUGIN_EXPORT enum PlayerErrors resetPullBufferStream(unsigned int hash);
  /// Add a chunk of audio data to the pull buffer stream.
  /// [offset] the byte offset of this chunk in the original stream, or 0 for
  /// the next sequential chunk.
  FFI_PLUGIN_EXPORT enum PlayerErrors
  addPullBufferDataStream(unsigned int hash, const unsigned char *data,
                          unsigned int aDataLen, uint64_t offset);
  /// Get the decoded time range of the pull buffer stream.
  /// [startTime] returns the start time in seconds of the decoded buffer.
  /// [endTime] returns the end time in seconds of the decoded buffer.
  FFI_PLUGIN_EXPORT enum PlayerErrors
  getPullBufferTimeRange(unsigned int hash, double *startTime,
                         double *endTime);
  FFI_PLUGIN_EXPORT enum PlayerErrors
  addAudioDataStream(unsigned int hash, const unsigned char *data,
                     unsigned int aDataLen);
  /// Set the end of the data stream.
  /// [hash] the hash of the stream sound.
  FFI_PLUGIN_EXPORT enum PlayerErrors setDataIsEnded(unsigned int hash);
  /// Stop already loaded sound identified by [handle] and clear it
  ///
  /// [handle]
  /// Returns [PlayerErrors.noError] if success, [PlayerErrors.backendNotInited]
  /// if the engine is not initialized, [PlayerErrors.soundHandleNotFound] if
  /// [handle] is not valid (for example the voice has already ended).
  FFI_PLUGIN_EXPORT enum PlayerErrors stop(unsigned int handle);
  /// Seek playing in [time] seconds
  /// [time]
  /// [handle] the sound handle
  /// Returns [PlayerErrors.noError] if success
  ///
  /// NOTE: when seeking an mp3 file loaded using `loadIntoMem`=false
  /// the seek operation is not performed due to lags. This occurs because the
  /// mp3 codec must compute each frame length to gain a new position.
  /// The problem is explained in souloud_wavstream.cpp
  /// in `WavStreamInstance::seek` function.
  ///
  /// This mode is useful ie for background music, not for a music player
  /// where a seek slider for mp3s is a must.
  /// If you need seeking mp3, please, use `loadIntoMem`=true instead
  /// or other audio formats!
  FFI_PLUGIN_EXPORT enum PlayerErrors seek(unsigned int handle, float time);