src/audiobuffer/metadata_ffi.h

struct AudioMetadataFFI
{
    DetectedTypeFFI detectedType;
    struct Mp3MetadataFFI mp3Metadata;
    struct OggMetadataFFI oggMetadata;
    struct AacMetadataFFI aacMetadata;
    struct Ac3MetadataFFI ac3Metadata;
    struct Eac3MetadataFFI eac3Metadata;
};
// callback to tell dart the metadata
typedef void (*dartOnMetadataCallback_t)(struct AudioMetadataFFI metadata);