lib/src/bindings/flutter_soloud_ffigen.dart


/// prepareEngineInit() for a claim that was decided earlier than it is
/// taken.
///
/// Returns false, changing nothing, when a shutdown has been requested
/// since [shutdown_epoch] was read.
@ffi.Native<ffi.Bool Function(ffi.Int64, ffi.Uint64)>()
external bool prepareEngineInitForRequest(
  int owner_engine_id,
  int shutdown_epoch,
);

/// Tear the engine down because its owning FlutterEngine is being destroyed
/// while the process keeps running (the audio_service / add-to-app case).
///
/// Returns false unless [engine_id] still owns the native engine.
@ffi.Native<ffi.Bool Function(ffi.Int64)>()
external bool requestEngineTeardownForEngine(int engine_id);

@ffi.Native<ffi.Int Function()>()
external int isInited();

/// Load a new sound to be played once or multiple times later.
///
/// After loading the file, the [fileLoadedCallback] will call the
/// Dart function defined with [setDartEventCallback] which gives back
/// the error and the new hash.
///
/// [completeFileName] the complete file path.
/// [loadIntoMem] if true Soloud::wav will be used which loads
/// all audio data into memory. This will be useful when
/// the audio is short, ie for game sounds, mainly used to prevent
/// gaps or lags when starting a sound (less CPU, more memory allocated).
/// If false, Soloud::wavStream will be used and the audio data is loaded
/// from the given file when needed (more CPU, less memory allocated).
/// See the [seek] note problem when using [loadIntoMem] = false
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Bool, ffi.Uint64)>()
external void loadFile(
  ffi.Pointer<ffi.Char> completeFileName,
  bool loadIntoMem,
  int counter,
);

/// Load a new sound stored into [buffer] to be played once or multiple times
/// later. Mainly used on web because the browsers are not allowed to read
/// files directly.
///
/// [uniqueName] the unique name of the sound. Used only to have the [hash].
/// [buffer] the audio data. These contains the audio file bytes.
/// [length] the length of [buffer].
/// [loadIntoMem] if true Soloud::wav will be used which loads
/// all audio data into memory. This will be useful when
/// the audio is short, ie for game sounds, mainly used to prevent
/// gaps or lags when starting a sound (less CPU, more memory allocated).
/// If false, Soloud::wavStream will be used and the audio data is loaded
/// from the given file when needed (more CPU, less memory allocated).
/// See the [seek] note problem when using [loadIntoMem] = false
/// [hash] return the hash of the sound.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.UnsignedInt>,
  )
>(symbol: 'loadMem')
external int _loadMem(
  ffi.Pointer<ffi.Char> uniqueName,
  ffi.Pointer<ffi.UnsignedChar> buffer,
  int length,
  int loadIntoMem,
  ffi.Pointer<ffi.UnsignedInt> hash,
);

PlayerErrors loadMem(
  ffi.Pointer<ffi.Char> uniqueName,
  ffi.Pointer<ffi.UnsignedChar> buffer,
  int length,
  int loadIntoMem,
  ffi.Pointer<ffi.UnsignedInt> hash,
) => PlayerErrors.fromValue(
  _loadMem(uniqueName, buffer, length, loadIntoMem, hash),
);

/// Load 2 audios, convert to mono if needed, and join them into a single
/// stereo AudioSource.
/// [hash] return the hash of the sound.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.UnsignedInt>,
  )
>(symbol: 'joinTwoSources')
external int _joinTwoSources(
  ffi.Pointer<ffi.Char> uniqueName,
  ffi.Pointer<ffi.UnsignedChar> mem1,
  ffi.Pointer<ffi.UnsignedChar> mem2,
  int length1,
  int length2,
  ffi.Pointer<ffi.UnsignedInt> hash,
);

PlayerErrors joinTwoSources(
  ffi.Pointer<ffi.Char> uniqueName,
  ffi.Pointer<ffi.UnsignedChar> mem1,
  ffi.Pointer<ffi.UnsignedChar> mem2,
  int length1,
  int length2,
  ffi.Pointer<ffi.UnsignedInt> hash,
) => PlayerErrors.fromValue(
  _joinTwoSources(uniqueName, mem1, mem2, length1, length2, hash),
);

/// Set up an audio stream.
///
/// [maxBufferSize] the max buffer size in **bytes**. When adding audio data
/// using [addAudioDataStream] and this values is reached, the stream will
/// be considered ended (likewise we called [setDataIsEnded]). This means
/// that when playing it, it will stop at that point (if loop is not set).
///
/// **Note:** this parameter doesn't allocate any memory, but it just limits
/// the amount of data that can be added.
///
/// [bufferingTimeNeeds] the buffering time needed in seconds. If a handle
/// reaches the current buffer length, it will start to buffer pausing it
/// and waiting until the buffer will have enough data to cover this time.
///
/// [sampleRate] the sample rate. Usually is 22050 or 44100 (CD quality).
/// When using [format] as `opus`, the sample rate can be 48000, 24000,
/// 16000, 12000 or 8000. Whatever the sample rate of the incoming data is,
/// it will be resampled to this value. So, if you are adding Opus data at
/// 48 KHz, and you set this to 24000, the data will be resampled to 24 KHz.
///
/// [channels] choose the number of channels. The `opus` format
/// supports only mono and stereo.
///
/// [format] choose from `f32le`, `s8`, `s16le`, `s32le` and
/// `opus`. The last one is a special format that uses the Opus codec with
/// Ogg container. It supports only 48, 24, 16, 12 and 8 KHz sample rates
/// and mono and stereo.
///
/// [onBufferingCallback] a callback that is called when starting to buffer
/// (isBuffering = true) and when the buffering is done (isBuffering =
/// false). The callback is called with the `handle` which triggered the
/// event and the `time` in seconds.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ffi.UnsignedInt>,
    ffi.UnsignedLong,
    ffi.Int,
    ffi.Double,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Int,
    dartOnBufferingCallback_t,
    dartOnMetadataCallback_t,
  )
>(symbol: 'setBufferStream')
external int _setBufferStream(
  ffi.Pointer<ffi.UnsignedInt> hash,
  int maxBufferSize,
  int bufferingType,
  double bufferingTimeNeeds,
  int sampleRate,
  int channels,
  int format,
  dartOnBufferingCallback_t onBufferingCallback,
  dartOnMetadataCallback_t onMetadataCallback,
);

PlayerErrors setBufferStream(
  ffi.Pointer<ffi.UnsignedInt> hash,
  int maxBufferSize,
  int bufferingType,
  double bufferingTimeNeeds,
  int sampleRate,
  int channels,
  int format,
  dartOnBufferingCallback_t onBufferingCallback,
  dartOnMetadataCallback_t onMetadataCallback,
) => PlayerErrors.fromValue(
  _setBufferStream(
    hash,
    maxBufferSize,
    bufferingType,
    bufferingTimeNeeds,
    sampleRate,
    channels,
    format,
    onBufferingCallback,
    onMetadataCallback,
  ),
);

/// Resets the buffer of the data stream.
/// [hash] the hash of the stream sound.
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt)>(
  symbol: 'resetBufferStream',
)
external int _resetBufferStream(int hash);

PlayerErrors resetBufferStream(int hash) =>
    PlayerErrors.fromValue(_resetBufferStream(hash));

/// Get the time consumed by the stream of a type `BufferingType.RELEASED`
/// with hash [hash].
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Pointer<ffi.Float>)>(
  symbol: 'getStreamTimeConsumed',
)
external int _getStreamTimeConsumed(
  int hash,
  ffi.Pointer<ffi.Float> timeConsumed,
);

PlayerErrors getStreamTimeConsumed(
  int hash,
  ffi.Pointer<ffi.Float> timeConsumed,
) => PlayerErrors.fromValue(_getStreamTimeConsumed(hash, timeConsumed));

/// Set the icy metadata integer value. Must be set once before calling
/// the first time [addAudioDataStream] to be able to get MP3 metadata
/// of a stream.
///
/// [hash] the hash of the stream sound.
/// [icyMetaInt] the icy metadata integer value. Default is 16000 which
/// is the most used value.
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Int)>(
  symbol: 'setBufferIcyMetaInt',
)
external int _setBufferIcyMetaInt(int hash, int icyMetaInt);

PlayerErrors setBufferIcyMetaInt(int hash, int icyMetaInt) =>
    PlayerErrors.fromValue(_setBufferIcyMetaInt(hash, icyMetaInt));

/// Set up a pull-based audio stream.
///
/// [audioSizeBytes] the total size in **bytes** of the original encoded or
/// PCM stream. This is used to compute the total audio duration and to
/// request the tail chunk for formats where the duration is not in the
/// header (Ogg Vorbis/Opus).
///
/// [onBufferingCallback] a callback that is called when starting to buffer
/// and when the buffering is done.
///
/// [onMetadataCallback] a callback that is called when metadata is detected.
///
/// [onMoreDataIsNeededCallback] a callback that is called when the engine
/// needs more encoded audio data. The parameter is the byte offset in the
/// original encoded stream.
///
/// [onAudioDurationCallback] a callback that is called once the total audio
/// duration has been determined.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ffi.UnsignedInt>,
    ffi.UnsignedInt,
    ffi.Double,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Int,
    ffi.Uint64,
    dartOnBufferingCallback_t,
    dartOnMetadataCallback_t,
    dartOnMoreDataIsNeededCallback_t,
    dartOnAudioDurationCallback_t,
  )
>(symbol: 'setPullBufferStream')
external int _setPullBufferStream(
  ffi.Pointer<ffi.UnsignedInt> hash,
  int bufferSizeBytes,
  double bufferTriggerPosition,
  int sampleRate,
  int channels,
  int format,
  int audioSizeBytes,
  dartOnBufferingCallback_t onBufferingCallback,
  dartOnMetadataCallback_t onMetadataCallback,
  dartOnMoreDataIsNeededCallback_t onMoreDataIsNeededCallback,
  dartOnAudioDurationCallback_t onAudioDurationCallback,
);

PlayerErrors setPullBufferStream(
  ffi.Pointer<ffi.UnsignedInt> hash,
  int bufferSizeBytes,
  double bufferTriggerPosition,
  int sampleRate,
  int channels,
  int format,
  int audioSizeBytes,
  dartOnBufferingCallback_t onBufferingCallback,
  dartOnMetadataCallback_t onMetadataCallback,
  dartOnMoreDataIsNeededCallback_t onMoreDataIsNeededCallback,
  dartOnAudioDurationCallback_t onAudioDurationCallback,
) => PlayerErrors.fromValue(
  _setPullBufferStream(
    hash,
    bufferSizeBytes,
    bufferTriggerPosition,
    sampleRate,
    channels,
    format,
    audioSizeBytes,
    onBufferingCallback,
    onMetadataCallback,
    onMoreDataIsNeededCallback,
    onAudioDurationCallback,
  ),
);

/// Resets the pull buffer stream.
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt)>(
  symbol: 'resetPullBufferStream',
)
external int _resetPullBufferStream(int hash);

PlayerErrors resetPullBufferStream(int hash) =>
    PlayerErrors.fromValue(_resetPullBufferStream(hash));

/// Add a chunk of audio data to the pull buffer stream.
/// [offset] the byte offset of this chunk in the original stream, or 0 for
/// the next sequential chunk.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UnsignedInt,
    ffi.Uint64,
  )
>(symbol: 'addPullBufferDataStream')
external int _addPullBufferDataStream(
  int hash,
  ffi.Pointer<ffi.UnsignedChar> data,
  int aDataLen,
  int offset,
);

PlayerErrors addPullBufferDataStream(
  int hash,
  ffi.Pointer<ffi.UnsignedChar> data,
  int aDataLen,
  int offset,
) => PlayerErrors.fromValue(
  _addPullBufferDataStream(hash, data, aDataLen, offset),
);

/// Get the decoded time range of the pull buffer stream.
/// [startTime] returns the start time in seconds of the decoded buffer.
/// [endTime] returns the end time in seconds of the decoded buffer.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
  )
>(symbol: 'getPullBufferTimeRange')
external int _getPullBufferTimeRange(
  int hash,
  ffi.Pointer<ffi.Double> startTime,
  ffi.Pointer<ffi.Double> endTime,
);
